# libbool

./: meson.build
include/: ansicodes.h  bool.h  color.c  is_number.c  log.c  log.h  term.c
src/: bool.c
tests/: test1.c
